[package]
name = "calcit_json"
version = "0.0.2"
authors = ["jiyinyiyong <jiyinyiyong@gmail.com>"]
edition = "2021"

[lib]
name = "calcit_std"
path = "src/lib.rs"
crate-type = ["dylib"] # Creates dynamic lib


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cirru_edn = "0.4.2"
cirru_parser = "0.1.25"
json = "0.12.4"
hex = "0.4.3"
