[package]
name = "calcit_json"
version = "0.0.7"
authors = ["jiyinyiyong <jiyinyiyong@gmail.com>"]
edition = "2021"

[lib]
name = "calcit_json"
path = "src/lib.rs"
crate-type = ["dylib"] # Creates dynamic lib


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cirru_edn = "0.6.8"
cirru_parser = "0.1.29"
hex = "0.4.3"
json = "0.12.4"